--- a/style.css
+++ b/style.css
@@ -29,16 +29,35 @@ input{
 
 }
 
+.container::before{
+    content: '';
+    position: absolute;
+    height: 2000px;
+    width: 2000px;
+    top: -10%;
+    right: 48%;
+    background-image: linear-gradient(-45deg, 
+    rgb(154, 205, 50) 0%,
+    rgb(118, 168, 18) 100% );
+    transform: translateY(-50%);
+    border-radius: 50%;
+    z-index: 6;
+}
+
 form{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 0 5rem;
+    padding: 0 5rem;
     align-items: center;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
 .title{
     font-size: 2.2rem;
-    color: #444;
+    color: rgba(94, 55, 235, 0.637);
     margin: 10px;
 
 }
@@ -122,4 +141,105 @@ form{
 .social-icon:hover{
     color:rgb(118, 168, 18) ;
     border-color: rgb(154, 205, 50);
+}
+
+.signin-signup{
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 5;
+}
+
+form.sign-in-form{
+    z-index: 2;
+}
+
+form.sign-up-form{
+    z-index: 1;
+    opacity: 0;
+}
+
+.image2{
+    display:grid;
+    width: 100%;
+    height: 500%;
+    opacity: 80%;
+}
+.image1{
+    width: 33%;
+    height: 25%;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    transition: all 0.5s;
+    padding: 1.5rem;
+}
+
+.panels-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.panel{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;
+    justify-content: center; */
+    text-align: center;
+    z-index: 7;
+}
+
+.left-panel{
+    padding: 1rem 5%  1rem 5%;
+    
+}
+/* .right-panel{
+    padding: 3rem 12% 2rem 17%;
+} */
+.panel .content{
+    color: rgba(101, 34, 163, 0.713);
+}
+.panel h3{
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+/* .panel p{
+    font-size: 0.95rem;
+    padding: 0.7rem 0;
+} */
+
+.btn.transparent{
+    margin: 0;
+    background: none;
+    border: 2px solid #fff;
+    width: 130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+.btn.transparent:hover{
+    background-color: rgb(118, 168, 18);
+}
+/* .right-panel.content, .right-panel.image{
+    transform: translateX(800px);
+
+} */
+.signup-signup{
+    position: absolute;
+    top:40%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    grid-template-columns: 1fr;
 }
